--- a/request-sizing.ipynb
+++ b/request-sizing.ipynb
@@ -35,7 +35,16 @@
     "from prom_usage_service import PromUsageService\n",
     "service = PromUsageService()\n",
     "time_series = service.query(start=14, end=0)\n",
-    "\n",
+    "service.save_cache(\"./data/cpu_usage.json\", overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51be87db-4a89-48dc-81a2-d515d1ef8445",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots()\n",
     "ax.plot(time_series.time, time_series.resource, linewidth=2.0)\n",
     "plt.xticks(rotation = 45)\n",
@@ -45,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51be87db-4a89-48dc-81a2-d515d1ef8445",
+   "id": "81c3bc4e-ad5f-4acb-b373-6164cf922b19",
    "metadata": {},
    "outputs": [],
    "source": []
