Serialization of time series - Store JSON dump to disk - Separate notebooks for CPU usage data extraction from Prometheus and   CPU request assessment

--- a/cpu-load-extraction.ipynb
+++ b/cpu-load-extraction.ipynb
@@ -5,7 +5,7 @@
    "id": "1159b013-6551-41ba-8f65-ea74495305ed",
    "metadata": {},
    "source": [
-    "# Sizing of K8s deployment based on monitoring"
+    "# Extraction of CPU load time series"
    ]
   },
   {
@@ -33,20 +33,32 @@
    "outputs": [],
    "source": [
     "from prom_usage_service import PromUsageService\n",
-    "service = PromUsageService()\n",
-    "time_series = service.query(start=14, end=0)\n",
-    "service.save_cache(\"./data/cpu_usage.json\", overwrite=True)"
+    "prom_service = PromUsageService()\n",
+    "time_series = prom_service.query(start=14, end=0)\n",
+    "prom_service.save_cache(\"./data/cpu_usage.json\", overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51be87db-4a89-48dc-81a2-d515d1ef8445",
+   "id": "81c3bc4e-ad5f-4acb-b373-6164cf922b19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from stats_service import StatsService\n",
+    "stats_service = StatsService(name=\"CPU usage\")\n",
+    "stats_service.load_time_series(path=\"data/cpu_usage.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d48d16b5-59a8-4eb2-860a-de8ac95f8c27",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.plot(time_series.time, time_series.resource, linewidth=2.0)\n",
+    "ax.plot(stats_service.time_series.time, stats_service.time_series.resource, linewidth=2.0)\n",
     "plt.xticks(rotation = 45)\n",
     "plt.show()"
    ]
@@ -54,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81c3bc4e-ad5f-4acb-b373-6164cf922b19",
+   "id": "755de660-ca31-400f-946f-4b29662375a3",
    "metadata": {},
    "outputs": [],
    "source": []
