feat: moving average smoothing

--- a/cpu-load-extraction.ipynb
+++ b/cpu-load-extraction.ipynb
@@ -5,7 +5,8 @@
    "id": "1159b013-6551-41ba-8f65-ea74495305ed",
    "metadata": {},
    "source": [
-    "# Extraction of CPU load time series"
+    "# Extraction of CPU load time series\n",
+    "⚠️ **The VPN must be active!**"
    ]
   },
   {
@@ -26,6 +27,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "096ffe32-bfc2-4977-aca7-e6072f093263",
+   "metadata": {},
+   "source": [
+    "## Extraction\n",
+    "- Query data from Prometheus\n",
+    "- Store a dump of data to the local FS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1200a172-cd5c-4033-97e9-d59deb10ddb1",
@@ -39,13 +50,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d02ed043-3bb3-4db1-b96e-f0b9f8d8fe24",
+   "metadata": {},
+   "source": [
+    "## Deserialization test\n",
+    "Test that an instance of `StatsService` can deserialize the dump of a time series."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "81c3bc4e-ad5f-4acb-b373-6164cf922b19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from stats_service import StatsService\n",
+    "from stats.stats_service import StatsService\n",
     "stats_service = StatsService(name=\"CPU usage\")\n",
     "stats_service.load_time_series(path=\"data/cpu_usage.json\")"
    ]
