feat: peak detection

--- a/pods-cpu-request.ipynb
+++ b/pods-cpu-request.ipynb
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "from stats import smoothing\n",
-    "stats_service.smooth(algo_type=smoothing.Method.MOVING_AVG, window_size=11).floor()"
+    "stats_service.smooth(algo_type=smoothing.Method.MOVING_AVG, window_size=11).floor(threshold=100e-3)"
    ]
   },
   {
@@ -70,6 +70,26 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8da4d2f4-ac6d-44a3-b2aa-2fbe3245d230",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "peaks = stats_service.get_peaks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d63d7c1-dfaf-47af-86c9-994630711307",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "peaks.datetimes(threshold=3320e-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82a4edc4-9efb-41c9-bda8-f889d264604c",
    "metadata": {},
    "outputs": [],
    "source": []
