feat: percentiles on peak values

--- a/pods-cpu-request.ipynb
+++ b/pods-cpu-request.ipynb
@@ -43,6 +43,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2fd74fc9-da85-479f-a384-94fecb1d3c57",
+   "metadata": {},
+   "source": [
+    "## Signal processing\n",
+    "- Smoothing with the _moving average_ approach\n",
+    "- Flooring of lower values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "83258910-026a-4924-ba61-e5879857aeba",
@@ -67,12 +77,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04d4278d-3684-4738-85d6-c6479168ee57",
+   "metadata": {},
+   "source": [
+    "## CPU Peak values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8da4d2f4-ac6d-44a3-b2aa-2fbe3245d230",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Find peaks\n",
     "peaks = stats_service.get_peaks()"
    ]
   },
@@ -83,13 +102,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "peaks.datetimes(threshold=3320e-3)"
+    "# Test peak filtering by threshold\n",
+    "peaks.datetimes(threshold=3300e-3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "82a4edc4-9efb-41c9-bda8-f889d264604c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "peaks.plots.histogram(bins=40, xlim=(2, 3.5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48320175-f288-4ba7-98f7-28887e5d2a19",
+   "metadata": {},
+   "source": [
+    "## Percentiles\n",
+    "The percentiles are computed with a **non-parametric** approach. The assessment is not sensitive to the numerical method.\n",
+    "\n",
+    "💡 These non-parametric approach are bounded to the sample range. Using a distribution model would allow a more \"robust\" result, given a proper determination of the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "511605cf-004c-4963-9fa2-2884a07d0e03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "percents = [90,95, 99]\n",
+    "methods = [\n",
+    "    \"linear\",\n",
+    "    \"inverted_cdf\",\n",
+    "    \"averaged_inverted_cdf\",\n",
+    "    \"closest_observation\",\n",
+    "    \"interpolated_inverted_cdf\",\n",
+    "    \"hazen\",\n",
+    "    \"weibull\",\n",
+    "    \"median_unbiased\",\n",
+    "    \"normal_unbiased\",\n",
+    "    \"lower\",\n",
+    "    \"higher\",\n",
+    "    \"midpoint\",\n",
+    "    \"nearest\",\n",
+    "]\n",
+    "\n",
+    "records = []\n",
+    "for method in methods:\n",
+    "    percentile_res = peaks.percentiles(percents, method=method)\n",
+    "    records.append({f\"q-{perc_val}\": quant_val for perc_val, quant_val in zip(percents, percentile_res)})\n",
+    "    \n",
+    "df = pd.DataFrame(records, index=methods)\n",
+    "display(df)\n",
+    "display(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9996ccf8-9c27-40c6-9ac5-184ef89001ed",
    "metadata": {},
    "outputs": [],
    "source": []
