feat: CPU load stats

--- a/cpu-load-extraction.ipynb
+++ b/cpu-load-extraction.ipynb
@@ -33,7 +33,13 @@
    "source": [
     "## Extraction\n",
     "- Query data from Prometheus\n",
-    "- Store a dump of data to the local FS"
+    "- Store a dump of data to the local FS\n",
+    "### Parameters\n",
+    "`k8s_cluster`: Kubernetes cluster's identifier where the Prometheus server runs\n",
+    "- `\"prod\"`\n",
+    "- `\"preprod\"`\n",
+    "\n",
+    "`workload`: Name of a Kubernetes _statefulset_ or _deployment_ in the selected Kubernetes cluster"
    ]
   },
   {
@@ -43,9 +49,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Parameters\n",
+    "k8s_cluster=\"preprod\"\n",
+    "workload=\"analyzer-worker-data\"\n",
+    "range_from=30 # days\n",
+    "range_to=0 # days, 0 = \"now\"\n",
+    "\n",
     "from prom_usage_service import PromUsageService\n",
-    "prom_service = PromUsageService()\n",
-    "time_series = prom_service.query(start=14, end=0)\n",
+    "prom_service = PromUsageService(cluster=k8s_cluster, workload=workload)\n",
+    "time_series = prom_service.query(start=range_from, end=range_to)\n",
     "prom_service.save_cache(\"./data/cpu_usage.json\", overwrite=True)"
    ]
   },
