Memory extraction from Prometheus

--- a/cpu-load-extraction.ipynb
+++ b/cpu-load-extraction.ipynb
@@ -66,7 +66,7 @@
    "id": "d02ed043-3bb3-4db1-b96e-f0b9f8d8fe24",
    "metadata": {},
    "source": [
-    "## Deserialization test\n",
+    "## Deserialization / raw data plot\n",
     "Test that an instance of `StatsService` can deserialize the dump of a time series."
    ]
   },
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.plot(stats_service.time_series.time, stats_service.time_series.resource, linewidth=2.0)\n",
+    "ax.plot(stats_service.time_series.time, stats_service.time_series.resource, linewidth=1.0)\n",
     "plt.xticks(rotation = 45)\n",
     "plt.show()"
    ]
