--- a/mem-usage-extraction.ipynb
+++ b/mem-usage-extraction.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1159b013-6551-41ba-8f65-ea74495305ed",
+   "id": "e482c9cb-a6b5-4dc2-b76e-e0144233b390",
    "metadata": {},
    "source": [
-    "# Extraction of CPU load time series\n",
+    "# Extraction of memory usage time series\n",
     "⚠️ **The VPN must be active!**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bafeab04-3da3-4613-9307-01b7e25d136d",
+   "id": "15304f20-ec64-4191-b9e7-e43a3e75b64f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "096ffe32-bfc2-4977-aca7-e6072f093263",
+   "id": "59e96f43-bb53-4981-aacb-511e3d19a7f7",
    "metadata": {},
    "source": [
     "## Extraction\n",
@@ -45,47 +45,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1200a172-cd5c-4033-97e9-d59deb10ddb1",
+   "id": "a202f572-15ee-47cd-9a04-0951c1474379",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters\n",
     "k8s_cluster=\"preprod\"\n",
-    "workload=\"analyzer-worker-data\"\n",
-    "range_from=30 # days\n",
+    "workload=\"nlp-data\"\n",
+    "range_from=60 # days\n",
     "range_to=0 # days, 0 = \"now\"\n",
     "\n",
     "from prom_usage_service import PromUsageService\n",
     "prom_service = PromUsageService(cluster=k8s_cluster, workload=workload)\n",
-    "time_series = prom_service.query(start=range_from, end=range_to)\n",
-    "prom_service.save_cache(\"./data/cpu_usage.json\", overwrite=True)"
+    "time_series = prom_service.query(start=range_from, end=range_to, metric=PromUsageService.Metrics.MEMORY_MIB)\n",
+    "prom_service.save_cache(\"./data/mem_usage.json\", overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85b0b37d-adc8-4738-86be-6e93e45d1b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_series.resource"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d02ed043-3bb3-4db1-b96e-f0b9f8d8fe24",
+   "id": "f32ff5ab-dc6d-4ecd-af26-f38054dfac59",
    "metadata": {},
    "source": [
-    "## Deserialization / raw data plot\n",
-    "Test that an instance of `StatsService` can deserialize the dump of a time series."
+    "## Deserialization / raw data plot"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81c3bc4e-ad5f-4acb-b373-6164cf922b19",
+   "id": "ca2502d6-f6b0-4b8c-95f0-8bdc4eb1a0a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "from stats.stats_service import StatsService\n",
-    "stats_service = StatsService(name=\"CPU usage\")\n",
-    "stats_service.load_time_series(path=\"data/cpu_usage.json\")"
+    "stats_service = StatsService(name=\"Memory usage\")\n",
+    "stats_service.load_time_series(path=\"data/mem_usage.json\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d48d16b5-59a8-4eb2-860a-de8ac95f8c27",
+   "id": "15b9a8b3-4160-4935-8957-e2bca5a95b9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "755de660-ca31-400f-946f-4b29662375a3",
+   "id": "7358709b-0234-45ee-86ba-42388b487c62",
    "metadata": {},
    "outputs": [],
    "source": []
