--- a/cpu-load-extraction.ipynb
+++ b/cpu-load-extraction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bafeab04-3da3-4613-9307-01b7e25d136d",
    "metadata": {},
    "outputs": [],
@@ -44,10 +44,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1200a172-cd5c-4033-97e9-d59deb10ddb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Split extraction into 10 chunks\n",
+      "Remaining chunks to extract: 10\n",
+      "Remaining chunks to extract: 9\n",
+      "Remaining chunks to extract: 8\n",
+      "Remaining chunks to extract: 7\n",
+      "Remaining chunks to extract: 6\n",
+      "Remaining chunks to extract: 5\n",
+      "Remaining chunks to extract: 4\n",
+      "Remaining chunks to extract: 3\n",
+      "Remaining chunks to extract: 2\n",
+      "Remaining chunks to extract: 1\n",
+      "Remaining chunks to extract: 0\n",
+      "Saved cached data to:\n",
+      "'/home/flaudarin/Development/monitoring/data/cpu_usage.json'\n"
+     ]
+    }
+   ],
    "source": [
     "# Parameters\n",
     "k8s_cluster=\"preprod\"\n",
@@ -55,8 +76,8 @@
     "range_from=30 # days\n",
     "range_to=0 # days, 0 = \"now\"\n",
     "\n",
-    "from prom_usage_service import PromUsageService\n",
-    "prom_service = PromUsageService(cluster=k8s_cluster, workload=workload)\n",
+    "from prometheus.prom_workload_usage_service import PromWorkloadUsageService\n",
+    "prom_service = PromWorkloadUsageService(cluster=k8s_cluster, workload=workload)\n",
     "time_series = prom_service.query(start=range_from, end=range_to)\n",
     "prom_service.save_cache(\"./data/cpu_usage.json\", overwrite=True)"
    ]
