--- a/mem-usage-extraction.ipynb
+++ b/mem-usage-extraction.ipynb
@@ -11,10 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "15304f20-ec64-4191-b9e7-e43a3e75b64f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -44,10 +53,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a202f572-15ee-47cd-9a04-0951c1474379",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Split extraction into 20 chunks\n",
+      "Remaining chunks to extract: 20\n",
+      "Remaining chunks to extract: 19\n",
+      "Remaining chunks to extract: 18\n",
+      "Remaining chunks to extract: 17\n",
+      "Remaining chunks to extract: 16\n",
+      "Remaining chunks to extract: 15\n",
+      "Remaining chunks to extract: 14\n",
+      "Remaining chunks to extract: 13\n",
+      "Remaining chunks to extract: 12\n",
+      "Remaining chunks to extract: 11\n",
+      "Remaining chunks to extract: 10\n",
+      "Remaining chunks to extract: 9\n",
+      "Remaining chunks to extract: 8\n",
+      "Remaining chunks to extract: 7\n",
+      "Remaining chunks to extract: 6\n",
+      "Remaining chunks to extract: 5\n",
+      "Remaining chunks to extract: 4\n",
+      "Remaining chunks to extract: 3\n",
+      "Remaining chunks to extract: 2\n",
+      "Remaining chunks to extract: 1\n",
+      "Remaining chunks to extract: 0\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [6], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mprometheus\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Metrics\n\u001b[1;32m      9\u001b[0m prom_service \u001b[38;5;241m=\u001b[39m PromWorkloadUsageService(cluster\u001b[38;5;241m=\u001b[39mk8s_cluster, workload\u001b[38;5;241m=\u001b[39mworkload)\n\u001b[0;32m---> 10\u001b[0m time_series \u001b[38;5;241m=\u001b[39m \u001b[43mprom_service\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mquery\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstart\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrange_from\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrange_to\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetric\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mMetrics\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMEMORY_MIB\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m prom_service\u001b[38;5;241m.\u001b[39msave_cache(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./data/mem_usage.json\u001b[39m\u001b[38;5;124m\"\u001b[39m, overwrite\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m~/Development/monitoring/prometheus/prom_workload_usage_service.py:117\u001b[0m, in \u001b[0;36mPromWorkloadUsageService.query\u001b[0;34m(self, start, end, step, metric)\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m metric \u001b[38;5;241m==\u001b[39m Metrics\u001b[38;5;241m.\u001b[39mMEMORY_MIB:\n\u001b[1;32m    115\u001b[0m     metric_values \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m20\u001b[39m\n\u001b[0;32m--> 117\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data_cache \u001b[38;5;241m=\u001b[39m TimeSeries(name\u001b[38;5;241m=\u001b[39m\u001b[43mmetric\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalue\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m, resource\u001b[38;5;241m=\u001b[39mmetric_values, time\u001b[38;5;241m=\u001b[39mtime_steps)\n\u001b[1;32m    119\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data_cache\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "# Parameters\n",
     "k8s_cluster=\"preprod\"\n",
@@ -55,9 +105,10 @@
     "range_from=60 # days\n",
     "range_to=0 # days, 0 = \"now\"\n",
     "\n",
-    "from prom_usage_service import PromUsageService\n",
-    "prom_service = PromUsageService(cluster=k8s_cluster, workload=workload)\n",
-    "time_series = prom_service.query(start=range_from, end=range_to, metric=PromUsageService.Metrics.MEMORY_MIB)\n",
+    "from prometheus.prom_workload_usage_service import PromWorkloadUsageService\n",
+    "from prometheus import Metrics\n",
+    "prom_service = PromWorkloadUsageService(cluster=k8s_cluster, workload=workload)\n",
+    "time_series = prom_service.query(start=range_from, end=range_to, metric=Metrics.MEMORY_MIB)\n",
     "prom_service.save_cache(\"./data/mem_usage.json\", overwrite=True)"
    ]
   },
